# nd-jpegli-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md  crates.js  deny.toml  help.html  search-index.js  settings.html  src-files.js
nd-jpegli/: Cargo.toml  build.rs  format-c.py  format-wrapper.py
nd-jpegli-sys/: .gitignore  Cargo.toml  bindgen-wrapper.h  build.rs  format-wrapper.py  generate-bindings.py  make-fake-jpegli.py
nd-jpegli-sys/bindgen-wrapper-files/: jconfig.h
nd-jpegli-sys/custom-jpegli/include/jpegli/: adaptive_quantization.h  bit_writer.h  bitstream.h  common.h  dct-inl.h  decode_marker.h  decode_scan.h  downsample.h  encode.h  encode_finish.h  encode_streaming.h  entropy_coding-inl.h  entropy_coding.h  error.h  huffman.h  input.h  jconfig.h  transpose-inl.h  upsample.h
nd-jpegli-sys/custom-jpegli/jpegli/: adaptive_quantization.cc  bit_writer.cc  bitstream.cc  color_quantize.cc  color_transform.cc  common.cc  destination_manager.cc  downsample.cc  encode.cc  encode_finish.cc  encode_streaming.cc  entropy_coding.cc  error.cc  huffman.cc  idct.cc  input.cc  render.cc  simd.cc  upsample.cc
nd-jpegli-sys/fake-jpegli/include/jpegli/: color_quantize.h  color_transform.h  common_internal.h  decode_internal.h  encode_internal.h  idct.h  memory_manager.h  quant.h  render.h
nd-jpegli-sys/fake-jpegli/jpegli/: adaptive_quantization.cc  color_transform.cc  decode.cc  decode_marker.cc  decode_scan.cc  downsample.cc  encode_finish.cc  encode_streaming.cc  entropy_coding.cc  idct.cc  input.cc  memory_manager.cc  quant.cc  render.cc  simd.cc  source_manager.cc  upsample.cc
nd-jpegli-sys/src/: __private_nd_jpegli_rs.rs  bindings.rs  lib.rs
nd-jpegli-sys/wrapper/: nd_jpegli_rs.c  wrapper.c  wrapper.h
nd-jpegli/c/: nd_jpegli_rs.c
nd-jpegli/src/: c_bindings.rs  decompress_context.rs  error_string.rs  lib.rs
nd_jpegli/: all.html  (+8 more)
(+153 files in other folders)
