[package]
name = "nd-jpegli-sys"
version = "0.0.0"
edition = "2021"
build = "build.rs"
license = "BSD-3-Clause"

[dev-dependencies]
image = { version = "0.25.1", features = [ "jpeg" ], default-features = false }

[build-dependencies]
cc = "1.0.102"
cmake = "0.1.50"

[features]
default = []
__private_nd_jpegli_rs = []
