[package]
name = "nd-jpegli-sys"
version = "0.0.0"
edition = "2021"
build = "src/build/build.rs"
links = "jpegli-static"
license = "BSD-3-Clause"

[dev-dependencies]
image = { version = "0.25.2", features = [ "jpeg" ], default-features = false }
jpeg-encoder = "0.6.0"

[build-dependencies]
cc = "1.1.7"
cmake = "0.1.50"

[features]
default = []
