[package]
name = "nd-jpegli"
version = "0.0.0"
edition = "2021"
license = "BSD-3-Clause"
build = "build.rs"

[dependencies]
nd-jpegli-sys = { path = "../nd-jpegli-sys" }
smallvec = "1.13.2"

[dev-dependencies]
image = { version = "0.25.2", features = [ "jpeg" ], default-features = false }

[build-dependencies]
cc = "1.1.23"
